--- a/css/admin.css
+++ b/css/admin.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 /* HEADER */
 .main-content {
     margin-left: 260px;
