--- a/css/course_schedule_creator.css
+++ b/css/course_schedule_creator.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 /* --- TEMEL AYARLAR --- */
 :root {
     --primary-blue: #2563EB;
